--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/mongoose": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "bcrypt": "^5.0.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.3",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
+    "@nestjs/passport": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
