--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "new-example",
+  "name": "order-services",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -25,6 +25,7 @@
     "@nestjs/config": "^1.0.1",
     "@nestjs/core": "^8.0.0",
     "@nestjs/jwt": "^8.0.0",
+    "@nestjs/microservices": "^8.0.5",
     "@nestjs/mongoose": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.0.8",
@@ -35,6 +36,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.3",
     "passport-jwt": "^4.0.0",
+    "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
